--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -114,7 +114,44 @@
                         </span>
                         <% } %>
                     </div>
-    
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="eligibleMonetaryAmount" class="bmd-label-static">
+                            適用通貨区分
+                        </label>
+                        <div class="input-group">
+                            <select class="form-control" name="eligibleMonetaryAmount" id="eligibleMonetaryAmount"
+                                style="width: 100%;">
+                                <% if (forms.eligibleMonetaryAmount !== undefined) { %>
+                                <option value="<%= JSON.stringify(forms.eligibleMonetaryAmount) %>" selected="selected">
+                                    <%= forms.eligibleMonetaryAmount.name.ja %></option>
+                                <% } %>
+                            </select>
+                        </div>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon2">が</span>
+                            </div>
+                            <input type="number" class="form-control" name="eligibleMonetaryAmountValue"
+                                id="eligibleMonetaryAmountValue" placeholder="" maxlength=10
+                                value="<%= forms.eligibleMonetaryAmountValue %>">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">必要</span>
+                            </div>
+                        </div>
+                
+                        <% if (errors && errors['eligibleMonetaryAmount']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['eligibleMonetaryAmount'].msg %>
+                        </span>
+                        <% } %>
+                        <% if (errors && errors['eligibleMonetaryAmountValue']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['eligibleMonetaryAmountValue'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="validRateLimit[scope]" class="bmd-label-static">
                             レート制限
