- 注文検索条件拡張

--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -89,6 +89,11 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                     <div class="advanced collapse">
                         <div class="form-row">
                             <div class="form-group bmd-form-group col-md-2">
+                                <label for="identifier[$in]">注文識別子</label>
+                                <input type="text" class="form-control" id="identifier[$in]" name="identifier[$in]" placeholder="confirmationPass:cinerino">
+                            </div>
+
+                            <div class="form-group bmd-form-group col-md-2">
                                 <label for="paymentMethodType" class="bmd-label-static">
                                     決済方法区分
                                 </label>
@@ -178,6 +183,18 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                             </div>
                         </div>
 
+                        <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="customer[identifier]" class="bmd-label-static">カスタマー識別子</label>
+                                <input type="text" class="form-control" id="customer[identifier]" name="customer[identifier]" placeholder="username:cinerino">
+                            </div>
+
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="customer[additionalProperty][$in]" class="bmd-label-static">カスタマー追加特性</label>
+                                <input type="text" class="form-control" id="customer[additionalProperty][$in]" name="customer[additionalProperty][$in]" placeholder="name:value">
+                            </div>
+                        </div>
+                        
                         <div class="form-row">
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="itemOffered[typeOf]" class="bmd-label-static">
