- 顧客コードをidentifier->branchCodeと変更

--- a/views/customers/_dataTables.ejs
+++ b/views/customers/_dataTables.ejs
@@ -34,7 +34,7 @@
 
                     <tbody>
                         <tr id="templateRow" _id="$id$">
-                            <td name="identifier">$identifier$</td>
+                            <td name="branchCode">$branchCode$</td>
                             <td name="name.ja|slice">$name.ja$</td>
                             <td name="url__url|slice">
                                 <a target="_blank" href="$url$">
