--- a/views/customers/form.ejs
+++ b/views/customers/form.ejs
@@ -49,22 +49,22 @@
 
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
-                        <label for="identifier" class="bmd-label-static">
+                        <label for="branchCode" class="bmd-label-static">
                             コード<span class="text-danger">＊</span>
                         </label>
                         <% if (isNew) { %>
-                        <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
-                            maxlength=12 value="<%= forms.identifier %>">
+                        <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
+                            maxlength=12 value="<%= forms.branchCode %>">
                         <% } else { %>
                         <input type="text" disabled class="form-control" placeholder="" maxlength=12
-                            value="<%= forms.identifier %>">
-                        <input type="hidden" class="form-control" name="identifier" id="identifier"
-                            value="<%= forms.identifier %>">
+                            value="<%= forms.branchCode %>">
+                        <input type="hidden" class="form-control" name="branchCode" id="branchCode"
+                            value="<%= forms.branchCode %>">
                         <% } %>
                         <span class="bmd-help">半角英数字12文字以内でご入力ください</span>
-                        <% if (errors && errors.identifier) { %>
+                        <% if (errors && errors.branchCode) { %>
                         <span class="bmd-help text-danger d-block">
-                            <%- errors.identifier.msg %>
+                            <%- errors.branchCode.msg %>
                         </span>
                         <% } %>
                     </div>
