--- a/views/customers/_dataTables.ejs
+++ b/views/customers/_dataTables.ejs
@@ -8,6 +8,14 @@
 
                     <div class="form-row">
                         <div class="form-group bmd-form-group col-md-2">
+                            <label for="branchCode[$regex]" class="bmd-label-static">
+                                コード
+                            </label>
+                            <input type="text" class="form-control" name="branchCode[$regex]" id="branchCode[$regex]"
+                                placeholder="" maxlength=64>
+                        </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
                             <label for="name" class="bmd-label-static">
                                 名称
                             </label>
@@ -25,7 +33,6 @@
                         <tr>
                             <th>コード</th>
                             <th>名称</th>
-                            <th>URL</th>
                             <th>連絡窓口</th>
                             <th>追加特性</th>
                             <th></th>
@@ -35,12 +42,7 @@
                     <tbody>
                         <tr id="templateRow" _id="$id$">
                             <td name="branchCode">$branchCode$</td>
-                            <td name="name.ja|slice">$name.ja$</td>
-                            <td name="url__url|slice">
-                                <a target="_blank" href="$url$">
-                                    $url$
-                                    <i class=" material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                </a></td>
+                            <td name="name.ja|slice:20">$name.ja$</td>
                             <td name="id__numContactPoint">
                                 <a href="javascript:void(0)" class="showContactPoint" data-id="$id$">
                                     $numContactPoint$
