- 承認検索にアクションを表示

--- a/views/authorizations/_dataTables.ejs
+++ b/views/authorizations/_dataTables.ejs
@@ -63,6 +63,7 @@
                             <th>有効期間(から)</th>
                             <th>有効期間(まで)</th>
                             <th>承認対象</th>
+                            <th>アクション</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -84,6 +85,11 @@
                                     表示
                                 </a>
                             </td>
+                            <td name="id__actions">
+                                <a href="javascript:void(0)" class="showActions" data-id="$id$">
+                                    表示
+                                </a>
+                            </td>   
                         </tr>
                     </tbody>
                 </table>
