- 所有権検索にアクションを表示

--- a/views/ownershipInfos/_dataTables.ejs
+++ b/views/ownershipInfos/_dataTables.ejs
@@ -87,6 +87,7 @@
                             <th>所有終了</th>
                             <th>所有者</th>
                             <th>所有物</th>
+                            <th>アクション</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -112,6 +113,11 @@
                                     <br>$typeOfGood.id$ $typeOfGood.identifier$
                                 </a>
                             </td>
+                            <td name="id__actions">
+                                <a href="javascript:void(0)" class="showActions" data-id="$id$">
+                                    表示
+                                </a>
+                            </td>  
                         </tr>
                     </tbody>
                 </table>
