- プロダクト検索条件拡張

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -81,6 +81,16 @@ PR-00
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
+                                    <label for="hasOfferCatalog[id]" class="bmd-label-static">
+                                        カタログ
+                                    </label>
+                                    <select class="form-control" name="hasOfferCatalog[id]" id="hasOfferCatalog[id]" style="width: 100%;">
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="offers[$elemMatch][seller][id]" class="bmd-label-static">
                                         販売者
                                     </label>
