--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -1,3 +1,8 @@
+<%
+const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+? process.env.PROJECT_CREATOR_IDS.split(',')
+: [];
+%>
 <div class="sidebar-wrapper">
     <ul class="nav">
         <li class="nav-item <%= (displayId === 'HO-01') ? 'active': ''; %>">
@@ -235,6 +240,15 @@
             <a class="nav-link" href="/projects/<%= req.project.id %>/accountingReports">
                 <i class="material-icons">summarize</i>
                 <p>経理レポート</p>
+            </a>
+        </li>
+        <% } %>
+
+        <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
+        <li class="nav-item <%= (displayId === 'ME-01') ? 'active': ''; %>">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/iam/members">
+                <i class="material-icons">person</i>
+                <p>IAMメンバー</p>
             </a>
         </li>
         <% } %>
