- プロジェクトメンバー検索条件拡張

--- a/views/iam/members/_dataTables.ejs
+++ b/views/iam/members/_dataTables.ejs
@@ -16,6 +16,14 @@
                                 <option value="Person">Person</option>
                             </select>
                         </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="member[hasRole][roleName]" class="bmd-label-static">
+                                ロール
+                            </label>
+                            <select class="form-control" name="member[hasRole][roleName]" id="member[hasRole][roleName]" style="width: 100%;">
+                            </select>
+                        </div>
                     </div>
 
                     <div class="advanced collapse">
