--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -251,6 +251,18 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                 <p>IAMメンバー</p>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/orders">
+                <i class="material-icons">description</i>
+                <p>注文</p>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/ownershipInfos">
+                <i class="material-icons">description</i>
+                <p>所有権</p>
+            </a>
+        </li>
         <% } %>
     </ul>
 </div>
