--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -48,7 +48,7 @@
                         </label>
 
                         <% if (isNew) { %>
-                        <select class="form-control" name="typeOf">
+                        <select class="form-control" name="typeOf" id="typeOf">
                             <% productTypes.forEach((productType) => { %>
                             <option value="<%= productType.codeValue %>"
                                 <% if (forms.typeOf === productType.codeValue) { %> selected<% } %>>
@@ -103,7 +103,7 @@
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="serviceOutputCategory" class="bmd-label-static">
                             <% if (forms.typeOf === 'MembershipService') { %>
-                            メンバーシップ区分
+                            アウトプットタイプ
                             <% } else if (forms.typeOf === 'PaymentCard') { %>
                             決済方法区分
                             <% } %>
@@ -122,6 +122,30 @@
                         <% if (errors && errors['serviceOutputCategory']) { %>
                         <span class="bmd-help text-danger d-block">
                             <%- errors['serviceOutputCategory'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+                    <% } %>
+
+                    <% if (forms.typeOf === 'MembershipService') { %>
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="serviceType" class="bmd-label-static">
+                            メンバーシップ区分
+                        </label>
+                        <select class="form-control" name="serviceType" id="serviceType" style="width: 100%;" <% if (!isNew && false) { %>
+                            disabled="disabled" <% } %>>
+                            <% if (forms.serviceType !== undefined) { %>
+                            <option value="<%= JSON.stringify(forms.serviceType) %>" selected="selected">
+                                <%= forms.serviceType.name.ja %></option>
+                            <% } %>
+                        </select>
+                        <% if (!isNew && false) { %>
+                        <input type="hidden" class="form-control" name="serviceType" value="<%= JSON.stringify(forms.serviceType) %>">
+                        <% } %>
+
+                        <% if (errors && errors['serviceType']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['serviceType'].msg %>
                         </span>
                         <% } %>
                     </div>
