--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -284,6 +284,12 @@ const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string'
                 <p>所有権</p>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/paymentServices">
+                <i class="material-icons">description</i>
+                <p>決済サービス</p>
+            </a>
+        </li>
         <% } %>
     </ul>
 </div>
